--- a/home.html
+++ b/home.html
@@ -1,5 +1,13 @@
-<Doctype>
-    <html>
-        <h1>Hello</h1>
-    </html>
-</Doctype>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            Home Page
+        </title>
+    </head>
+    <body>
+        <h2>
+            Welcome to my page!
+        </h2>
+    </body>
+</html>
