--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>  
-<html lang="en">
+<html lang="en">   
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello</title>
+    <title>Kossy website</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>Wagwan! Kossy.</h1>
+    <h2>
+        Testing the Stuff.
+    </h2>
+    <h3>Deploy OnChain.</h3>
+    <P>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quae in tempora ea quam nulla, quia inventore animi soluta, iusto magni a harum reiciendis consequuntur fuga, necessitatibus suscipit dolorem quibusdam.
+    </P>
 </body>
 </html>
